Invariant failure in RecordStoreV1RepairIterator::invalidate

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.8.0-rc3
    • Affects Version/s: 2.8.0-rc1
    • Component/s: Storage
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Invariant failure _currRecord != dl src/mongo/db/storage/mmap_v1/record_store_v1_repair_iterator.cpp 195
      
        * frame #0: 0x00007fff8b59c866 libsystem_kernel.dylib`__pthread_kill + 10
          frame #1: 0x00007fff8a23635c libsystem_pthread.dylib`pthread_kill + 92
          frame #2: 0x00007fff9386bb1a libsystem_c.dylib`abort + 125
          frame #3: 0x0000000100a5970c mongod`mongo::invariantFailed(msg=0x00000001015c7c08, file=0x00000001015c7ac8, line=195) + 396 at assert_util.cpp:147
          frame #4: 0x0000000100835863 mongod`mongo::RecordStoreV1RepairIterator::invalidate(this=0x0000000104bd0aa0, dl=0x000000011447cc50) + 179 at record_store_v1_repair_iterator.cpp:195
          frame #5: 0x00000001003432de mongod`mongo::MultiIteratorStage::invalidate(this=0x0000000104bce060, txn=0x0000000104a16ab0, dl=0x000000011447cc50, type=INVALIDATION_DELETION) + 174 at multi_iterator.cpp:121
          frame #6: 0x00000001005ff5aa mongod`mongo::PlanExecutor::invalidate(this=0x0000000104bb1ab0, txn=0x0000000104a16ab0, dl=0x000000011447cc50, type=INVALIDATION_DELETION) + 90 at plan_executor.cpp:255
          frame #7: 0x000000010019cff4 mongod`mongo::CollectionCursorCache::invalidateDocument(this=0x0000000103a5eed8, txn=0x0000000104a16ab0, dl=0x000000011447cc50, type=INVALIDATION_DELETION) + 660 at collection_cursor_cache.cpp:371
          frame #8: 0x0000000100193493 mongod`mongo::Collection::deleteDocument(this=0x0000000103a5eda0, txn=0x0000000104a16ab0, loc=0x000000011447cc50, cappedOK=false, noWarn=false, deletedId=0x000000011447cc40) + 595 at collection.cpp:284
          frame #9: 0x000000010030fb03 mongod`mongo::DeleteStage::work(this=0x0000000104a7cd30, out=0x000000011447ce00) + 1011 at delete.cpp:109
          frame #10: 0x00000001005ff780 mongod`mongo::PlanExecutor::getNext(this=0x0000000104a7cdd0, objOut=0x000000011447cec8, dlOut=0x0000000000000000) + 464 at plan_executor.cpp:288
          frame #11: 0x0000000100600084 mongod`mongo::PlanExecutor::executePlan(this=0x0000000104a7cdd0) + 84 at plan_executor.cpp:400
          frame #12: 0x00000001004a57f2 mongod`mongo::DeleteExecutor::execute(this=0x000000011447d168, db=0x0000000103af6fd0) + 274 at delete_executor.cpp:189
          frame #13: 0x000000010029b7ff mongod`mongo::multiRemove(txn=0x0000000104a16ab0, removeItem=0x000000011447d370, result=0x000000011447d290)::WriteOpResult*) + 1071 at batch_executor.cpp:1363
          frame #14: 0x00000001002989d2 mongod`mongo::WriteBatchExecutor::execRemove(this=0x000000011447d8f8, removeItem=0x000000011447d370, error=0x000000011447d380) + 130 at batch_executor.cpp:923
          frame #15: 0x00000001002979bd mongod`mongo::WriteBatchExecutor::bulkExecute(this=0x000000011447d8f8, request=0x000000011447d998, upsertedIds=0x000000011447d738, errors=0x000000011447d758) + 717 at batch_executor.cpp:785
          frame #16: 0x0000000100296981 mongod`mongo::WriteBatchExecutor::executeBatch(this=0x000000011447d8f8, request=0x000000011447d998, response=0x000000011447da08) + 1937 at batch_executor.cpp:265
          frame #17: 0x00000001002a5735 mongod`mongo::WriteCmd::run(this=0x0000000104b36080, txn=0x0000000104a16ab0, dbName=0x000000011447e438, cmdObj=0x000000011447e818, options=0, errMsg=0x000000011447e090, result=0x000000011447f870, fromRepl=false) + 773 at write_commands.cpp:144
          frame #18: 0x00000001002c84f5 mongod`mongo::_execCommand(txn=0x0000000104a16ab0, c=0x0000000104b36080, dbname=0x000000011447e438, cmdObj=0x000000011447e818, queryOptions=0, errmsg=0x000000011447e090, result=0x000000011447f870, fromRepl=false) + 149 at dbcommands.cpp:1216
          frame #19: 0x00000001002c9c73 mongod`mongo::Command::execCommand(txn=0x0000000104a16ab0, c=0x0000000104b36080, queryOptions=0, cmdns=0x000000010606d014, cmdObj=0x000000011447e818, result=0x000000011447f870, fromRepl=false) + 4835 at dbcommands.cpp:1430
          frame #20: 0x00000001002ca9f6 mongod`mongo::_runCommands(txn=0x0000000104a16ab0, ns=0x000000010606d014, _cmdobj=0x000000011447ff00, b=0x000000011447f8c8, anObjBuilder=0x000000011447f870, fromRepl=false, queryOptions=0) + 2310 at dbcommands.cpp:1505
          frame #21: 0x00000001005d6320 mongod`mongo::runCommands(txn=0x0000000104a16ab0, ns=0x000000010606d014, jsobj=0x000000011447ff00, curop=0x0000000115802600, b=0x000000011447f8c8, anObjBuilder=0x000000011447f870, fromRepl=false, queryOptions=0) + 96 at new_find.cpp:131
          frame #22: 0x00000001005d2b99 mongod`mongo::newRunQuery(txn=0x0000000104a16ab0, m=0x0000000114480cf0, q=0x000000011447fee8, curop=0x0000000115802600, result=0x0000000104a4e920, fromDBDirectClient=false) + 1433 at new_find.cpp:549
          frame #23: 0x00000001004499c3 mongod`mongo::receivedQuery(txn=0x0000000104a16ab0, c=0x0000000106a04470, dbresponse=0x0000000114480890, m=0x0000000114480cf0, fromDBDirectClient=false) + 915 at instance.cpp:220
          frame #24: 0x00000001004479f8 mongod`mongo::assembleResponse(txn=0x0000000104a16ab0, m=0x0000000114480cf0, dbresponse=0x0000000114480890, remote=0x0000000114480880, fromDBDirectClient=false) + 1160 at instance.cpp:390
          frame #25: 0x000000010001304e mongod`mongo::MyMessageHandler::process(this=0x0000000104a00400, m=0x0000000114480cf0, port=0x0000000104b80090, le=0x0000000106a03100) + 430 at db.cpp:194
          frame #26: 0x0000000100a907c1 mongod`mongo::PortMessageServer::handleIncomingMsg(arg=0x0000000104b800e0) + 3169 at message_server_port.cpp:234
          frame #27: 0x0000000100a912d9 mongod`void* boost::_bi::list1<boost::_bi::value<mongo::PortMessageServer::HandleIncomingMsgParam*> >::operator(this=0x0000000104bba2a0, (null)=type<void *> at 0x0000000114480df8, f=0x0000000104bba298, a=0x0000000114480e20, (null)=0)<void*, void* (*)(void*), boost::_bi::list0>(boost::_bi::type<void*>, void* (*&)(void*), boost::_bi::list0&, long) + 89 at bind.hpp:243
          frame #28: 0x0000000100a91274 mongod`boost::_bi::bind_t<void*, void* (this=0x0000000104bba298)(void*), boost::_bi::list1<boost::_bi::value<mongo::PortMessageServer::HandleIncomingMsgParam*> > >::operator()() + 68 at bind_template.hpp:20
          frame #29: 0x0000000100a9121c mongod`boost::detail::thread_data<boost::_bi::bind_t<void*, void* (this=0x0000000104bba0b0)(void*), boost::_bi::list1<boost::_bi::value<mongo::PortMessageServer::HandleIncomingMsgParam*> > > >::run() + 28 at thread.hpp:62
          frame #30: 0x0000000100b30984 mongod`boost::(anonymous namespace)::thread_proxy(param=0x0000000104bba0b0) + 148 at thread.cpp:121
          frame #31: 0x00007fff8a235899 libsystem_pthread.dylib`_pthread_body + 138
          frame #32: 0x00007fff8a23572a libsystem_pthread.dylib`_pthread_start + 137
          frame #33: 0x00007fff8a239fc9 libsystem_pthread.dylib`thread_start + 13
      

      Version: 792f66beb03f0c

            Assignee:
            David Storch
            Reporter:
            Kamran K. (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: