SERVER-16300 fix MMAPv1 repair cursor invalidation of a document in a singleton collection